2009-11-12  Jan Hubicka  <jh@suse.cz>

	* decl2.c (constrain_visibility): Clear WEAK and COMMON flags.

2009-11-11  Jason Merrill  <jason@redhat.com>

	PR c++/39131
	* rtti.c (emit_support_tinfos): Add DFP types.

2009-11-11  Jason Merrill  <jason@redhat.com>

	* call.c (build_op_delete_call): Downgrade error about
	placement/non-placement confusion to permerror.

2009-11-10  Jason Merrill  <jason@redhat.com>

	* call.c (build_op_delete_call): Tweak error.

	PR c++/34158
	PR c++/36406
	* call.c (non_placement_deallocation_fn_p): Split out...
	(build_op_delete_call): ...from here.  Use instantiate_type
	for placement delete.  Simplify logic.
	* pt.c (primary_template_instantiation_p): Non-static.
	* cp-tree.h: Declare it.

2009-11-09  Jason Merrill  <jason@redhat.com>

	PR c++/41972
	* parser.c (cp_parser_template_argument): Accept SCOPE_REF around
	VAR_DECL.

	PR c++/41994
	* pt.c (tsubst_baselink): tsubst the name.

2009-11-07  Jason Merrill  <jason@redhat.com>

	PR c++/37920
	* pt.c (tsubst) [TYPEOF_TYPE]: Set cp_unevaluated_operand.

	PR c++/18451
	PR c++/40738
	* cp-tree.h (cp_decl_specifier_seq): Add any_type_specifiers_p.
	* parser.c (cp_parser_single_declaration): Call
	cp_parser_parse_and_diagnose_invalid_type_name here, too.
	(cp_parser_parameter_declaration): And here.
	(cp_parser_parse_and_diagnose_invalid_type_name): Be
	less picky about declarator form.  Don't skip to
	the end of the block if	we're in a declarator.
	(cp_parser_decl_specifier_seq): Set any_type_specifiers_p.
	(cp_parser_simple_declaration): Check it.
	(cp_parser_member_declaration): Likewise.
	(cp_parser_diagnose_invalid_type_name): Tweak error message.
	(cp_parser_expression_statement): Likewise.
	* decl2.c (grokfield): Mention decltype instead of typeof.

2009-11-06  Jason Merrill  <jason@redhat.com>

	PR c++/15946
	* parser.c (cp_parser_check_template_parameters): Don't talk about
	specialization at function scope.
	(cp_parser_diagnose_invalid_type_name): Handle dependent scope.